[package]
name = "stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
serum_dex = "0.4.0"
solana-program = "=1.7.11"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
